import { defaultSchema } from '@atlaskit/editor-common';
import AbstractTree from '../../src/parser/abstract-tree';

describe('JIRA wiki markup - Abstract tree', () => {
  const testCases: [string, string][] = [
    ['simple quote wrapper string', '{quote}simple quote{quote}'],
    ['simple quote string', 'This is a {quote}simple quote{quote}'],
    [
      'multiple quotes containing string',
      'This is a {quote}quote1{quote}{quote}quote2{quote}',
    ],
    ['simple code containing string', 'This is a {code:xml}<xml_code/>{code}'],
    [
      'noformat example',
      'This is a {noformat}no format thing with {code}inside{code}{noformat}',
    ],
    [
      'quote example with a panel inside',
      'This is a {quote}quote with a {panel}panel{panel} inside{quote}.',
    ],
    [
      'panel with attributes and a nested quote',
      '{panel:title=My Title|borderStyle=dashed}{quote}Panel with nested quote here{quote}{panel}.',
    ],
    [
      'string with a wrong order of macros',
      'This is a {panel:foo=bar} panel with a {quote}quote inside{panel} but it is broken{quote}',
    ],
  ];

  for (const [testCaseName, markup] of testCases) {
    it(`should match parsed structure for ${testCaseName}`, () => {
      const tree = new AbstractTree(defaultSchema, markup);

      console.log(markup);
      console.log(JSON.stringify(tree.getTextIntervals(), null, 2));
      console.log();

      expect(tree.getTextIntervals()).toMatchSnapshot();
    });
  }
});
