// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Abstract tree should match parsed structure for multiple quotes containing string 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": undefined,
    "text": "This is a ",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "quote1",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "quote2",
  },
]
`;

exports[`JIRA wiki markup - Abstract tree should match parsed structure for panel with attributes and a nested quote 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "Panel with nested quote here",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": undefined,
    "text": ".",
  },
]
`;

exports[`JIRA wiki markup - Abstract tree should match parsed structure for quote example with a panel inside 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": undefined,
    "text": "This is a ",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "quote with a ",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "panel",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": " inside",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": undefined,
    "text": ".",
  },
]
`;

exports[`JIRA wiki markup - Abstract tree should match parsed structure for simple quote string 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": undefined,
    "text": "This is a ",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "simple quote",
  },
]
`;

exports[`JIRA wiki markup - Abstract tree should match parsed structure for simple quote wrapper string 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "simple quote",
  },
]
`;

exports[`JIRA wiki markup - Abstract tree should match parsed structure for string with a wrong order of macros 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": undefined,
    "text": "This is a ",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {
        "foo": "bar",
      },
      "macro": "panel",
    },
    "text": " panel with a ",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": "quote inside",
  },
  Object {
    "content": Array [
      Object {
        "type": "paragraph",
      },
    ],
    "macro": Object {
      "attrs": Object {},
      "macro": "quote",
    },
    "text": " but it is broken",
  },
]
`;
